# portfolio_optimization

./: .env  Cargo.toml  polygon_data.csv  report_summary.txt
src/: main.rs
src/data/: fetch_data.rs  fetch_data_polygon.rs  mod.rs  read_csv.rs  yahoo_periods.rs
src/helpers/: filter_map.rs  mod.rs
src/helpers/covariance_matrix/: calculate_covariance_matrix.rs  covariance_matrix_cpu.rs  covariance_matrix_cuda.rs  errors.rs  extract_returns.rs  mod.rs  models.rs
src/optimizer/: calculate_returns.rs  covariance_matrix.rs  efficient_frontier.rs  engine.rs  minimum_variance_portfolio.rs  mod.rs  optimize_portfolio.rs
