[package]
name = "portfolio_optimization"
version = "0.1.0"
edition = "2021"

[dependencies]
yahoo_finance_api = "3.0.0"
anyhow = "1.0.97"
cudarc = { version = "0.13.9", features = ["cuda-12080"] }
ndarray = { version = "0.16.1", features = ["blas"] }
ndarray-stats = "0.6.0"
tokio = { version = "1.44.1", features = ["full"] }
thiserror = "2.0.12"
chrono = "0.4.40"
ndarray-linalg = { version = "0.17.0", features = ["openblas-system"] }
clarabel = "0.10.0"